--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
     padding: 0;
 }
 
-@font-face {
+@font-face { /*se utiliza para cargar fuentes personalizadas en una página web 
+    para que puedan utilizarse en la presentación de contenido. */
     font-family: 'Brittany';
     src: url('./fonts/brittany_signature/BrittanySignature.ttf') format('truetype');
 }
@@ -177,7 +178,7 @@ footer p {
     max-width: 100%;
     height: auto;
 }
-/* Formularios*/
+/* Inicio de Sesión*/
 
 .form{ 
     
@@ -196,12 +197,12 @@ footer p {
     font-family: 'Nunito', sans-serif;
     font-size: 2rem;
     margin-bottom: .5em;
-    color: #000000 ;
+    color: #001A57 ;
 }
 
 .formParagraph{
     font-weight: 300;
-    color: #000000 ;
+    color: #001A57;
 }
 
 .formLink{
@@ -233,10 +234,10 @@ footer p {
 }
 
 .formInput:focus + .formLabel,
-.formInput :not(:placeholder-shown)+ .formLabel{
+.formInput:not(:placeholder-shown) + .formLabel{
     transform: translateY(-12px) scale(.7);
     transform-origin:left top;
-    color: #3866f2;
+    color: orange;
 }
 
 .formLabel{
@@ -251,7 +252,7 @@ footer p {
 }
 
 .formSubmit{
-    background: #3866f2;
+    background: orange;
     color:#fff;
     font-family: 'Nunito', sans-serif;
     font-weight: 300;
@@ -267,5 +268,5 @@ footer p {
 
     }
 
-}
 
+}
